--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="display">
 		<div id="clock" class="clock">
-			<h1 class="event_title">Live Event Starts in</h1>
+			<h1 class="event_title">Wyjazd do Gdańska za</h1>
 			<div id="numbers">
 				<span class="days"></span>
 				<span class="hours"></span>
@@ -27,11 +27,10 @@
 			</div>
 		</div>
 		<div id="door" class="hide">
-			<h1 class="event_title">Event Is Live</h1>
-			<p class="action_caption">Click the button below to enter Live Stream</p>
-			<button class="call_to_action_button" type="button" onclick="liveStream()">Enter Live Stream!</button>
+			
+			
 		</div>
-		<div class="author">Created by Katherine Adjahoe</div>
+	
 	</div>
 	<script src="timer.js"></script>
 </body>
