--- a/index.html
+++ b/index.html
@@ -1,37 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Javascript Countdown Clock</title>
-<meta name="Description" content="A javascript countdown clock or timer with beautiful HTML and CSS styling that is simple to use in any project or on any website .">
-<meta name="Keywords" content="javascript, js, countdown, clock, timer, css, html, website, design, beautiful timer, countdown clock, countdown timer, javascript timer, javascript countdown clock, javascript countdown timer">
-
-<link rel="stylesheet" type="text/css" href="timer.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Countdown Timer</title>
 </head>
-	
 <body>
-	<div class="display">
-		<div id="clock" class="clock">
-			<h1 class="event_title">Wyjazd do Gdańska za</h1>
-			<div id="numbers">
-				<span class="days"></span>
-				<span class="hours"></span>
-				<span class="minutes"></span>
-				<span class="seconds"></span>
-			</div>
-			<div id="units">
-				<span>Days</span>
-				<span>Hours</span>
-				<span>Minutes</span>
-				<span>Seconds</span>
-			</div>
-		</div>
-		<div id="door" class="hide">
-			
-			
-		</div>
-	
-	</div>
-	<script src="timer.js"></script>
+  <div class="countdown-container">
+    <h1>Countdown to September 14, 2023, 9:40 PM</h1>
+    <div class="countdown" id="countdown"></div>
+    <img src="your_photo.jpg" alt="Your Photo">
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
